client: Fix report header and login page on mobiles

--- a/client/src/pages/ReportDetails/components/ReportHeader/ReportHeader.scss
+++ b/client/src/pages/ReportDetails/components/ReportHeader/ReportHeader.scss
@@ -2,7 +2,7 @@
 
 .report-header {
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   column-gap: 1rem;
   margin-left: 0.5rem;
   align-items: center;
@@ -10,7 +10,6 @@
   &__name {
     color: $green;
     font-size: 2rem;
-    word-break: break-all;
   }
 
   &__timestamp {
@@ -24,14 +23,13 @@
   }
 
   @media (max-width: $sm) {
-    flex-direction: column;
-
     &__name {
       font-size: 1rem;
+      max-width: 50%;
     }
 
     &__timestamp {
-      font-size: 0.5rem;
+      font-size: 0.7rem;
     }
   }
 }
